od/2.0/de/index.markdown
---
title: Offen-Definition
layout: page
---

Versión: 2.0

Die Offen-Definition beschreibt präzise die Bedeutung von “offen” in Bezug auf Wissen, und unterstützt so eine starke Gemeinschaft, an der alle partizipieren können; die Fähigkeit zur Zusammenarbeit wird maximiert.

**Zusammenfassung:** _Wissen ist offen, wenn jede/jeder darauf frei zugreifen, es nutzen, verändern und teilen kann – eingeschränkt höchstens durch Maßnahmen, die Ursprung und Offenheit des Wissens bewahren._

Diese grundlegende Bedeutung entspricht der von “offen” in Bezug auf Software, wie in der “ [Open Source”-Definition](http://opensource.org/docs/osd), und steht synonym für “frei” oder “libre” wie in der Definition der [freien kulturelle Werke](http://freedomdefined.org/Definition/De/1.0). Die Offen-Definition wurde ursprünglich von der “Open Source”-Definition abgeleitet, die wiederum von den [Debian freie Software Richtlinien](http://www.debian.org/social_contract) abgeleitet wurde.

Der Begriff **Werk** wird im Folgenden verwendet, um ein Element oder ein Stück von Wissen, das übermittelt wird, zu bezeichnen.

Der Begriff **Lizenz** bezieht sich auf die rechtlichen Bedingungen, unter denen ein Werk zur Verfügung gestellt wird. Falls keine Lizenz angeboten wird, sollte dies so interpretiert werden, wie wenn auf standardmässige rechtliche Bedingungen zur Benutzung des Werks hingewiesen werden würde (zum Beispiel Urheberrecht oder public domain).

## 1. Offene Werke

Ein offenes **Werk** muss die folgenden Anforderungen bei seiner Verteilung erfüllen:

### 1.1 Offene Lizenz

Das **Werk** _muss_ unter einer offenen **Lizenz** verfügbar sein (wie in Abschnitt 2 definiert). Jegliche zusätzliche Bedingungen, die das Werk begleiten (etwa Nutzungsbedingungen oder Patente, die von der lizenzgebenden Person gehalten werden), _dürfen _den Bedingungen der Lizenz _nicht_ widersprechen.

### 1.2 Zugang

Das **Werk** soll als Ganzes und zu nicht mehr als angemessenen, einmaligen Reproduktionskosten verfügbar sein, vorzugsweise als kostenloser Download über das Internet. Jegliche weitere Informationen, die zur Einhaltung von Lizenzbestimmungen benötigt werden (etwa die Namen der Mitwirkenden, welche für die Einhaltung von Namensnennungs-Anforderungen benötigt werden), _müssen_ das Werk ebenfalls begleiten.

### 1.3 Offenes Format

Das **Werk** _muss_ in einer zweckdienlichen und modifizierbaren Form zur Verfügung gestellt werden, sodass keine unnötigen technischen Hindernisse bei der Ausübung genehmigter Rechte entstehen. Insbesondere sollten Daten maschinenlesbar sein, als Gesamt-Datensatz verfügbar sein, und in einem offenen Format zur Verfügung gestellt werden (d.h. einem Format mit frei verfügbaren und veröffentlichten Spezifikationen, die keinerlei finanzielle oder andere Einschränkungen bei seiner Verwendung macht) – oder zumindest in einem Format, das mit zumindest einer freien/libre/open-source Software-Anwendung bearbeitet werden kann.


## 2. Offene Lizenzen

Eine **Lizenz** ist offen, wenn ihre Bestimmungen die folgenden Bedingungen erfüllen:

### 2.1 Erforderliche Berechtigungen

Die **Lizenz** _muss_ unwiderruflich das Folgende erlauben (oder einräumen):

#### 2.1.1 Verwendung

Die **Lizenz** _muss_ die kostenfreie Nutzung des lizenzierten Werks ermöglichen.

#### 2.1.2 Weiterverbreitung

Die **Lizenz** _muss_ die Weiterverbreitung des lizensierten Werks, einschließlich Verkauf, erlauben – egal ob alleine, oder als Teil einer aus Werken von unterschiedlichen Quellen zusammengestellten Sammlung.

#### 2.1.3 Veränderung

Die **Lizenz** _muss_ die Schaffung von Derivaten der lizenzierten Arbeit erlauben und die Verbreitung solcher Derivate unter den gleichen Bedingungen der ursprünglichen lizenzierten Arbeit gewähren.

#### 2.1.4 Teilung

Die **Lizenz** _muss_ erlauben, dass jeder Teil des Werks frei verwendet, verbreitet, oder bearbeitet werden kann – unabhängig von jeglichem anderen Teil des Werks oder von jeglicher Sammlung von Werken, mit der es ursprünglich verbreitet wurde. Alle Beteiligten, die einen Bestandteil jeglichen Teils eines Werkes innerhalb der Bestimmungen der Original-Lizenz erhalten haben, sollen dieselben Rechte haben wie jene, die im Zusammenhang mit dem ursprünglichen Werk eingeräumt wurden.

#### 2.1.5 Zusammenstellung

Die **Lizenz** _muss_ erlauben, dass das lizenzierte Werk zusammen mit anderen eigenständigen Werken verbreitet wird, ohne dass dabei Beschränkungen für diese anderen Werke entstehen.

#### 2.1.6 Nicht-Diskriminierung

Die **Lizenz** _darf keine_ Person oder Gruppe diskriminieren.

#### 2.1.7 Übertragung

Die mit dem Werk verbundenen Rechte _müssen_ für alle, an die es verteilt worden ist, gelten – ohne dass es notwendig ist, irgendwelchen weiteren rechtlichen Bedingungen zuzustimmen.

#### 2.1.8 Anwendung auf jeden Zweck

Die **Lizenz** _muss_ die Nutzung, Weitergabe, Änderung und Zusammenstellung für jeden Zweck zu erlauben. Die Lizenz _darf_ niemanden darin beschränken, das Werk für  einen bestimmten Zweck zu verwenden.

#### 2.1.9 Keine Gebühr

Die **Lizenz** _darf keine_ Honorarvereinbarung, Lizenzgebühren oder andere Entschädigung oder monetäre Vergütung als Teil ihrer Bedingungen aufzwingen.

### 2.2 Akzeptable Bedingungen

Die **Lizenz** darf nicht die in Abschnitt 2.1 geforderten Genehmigungen einschränken, untergraben, oder anderweitig schwächen, außer unter den folgenden erlaubten Bedingungen:

#### 2.2.1 Zuschreibung

Die **Lizenz** _kann_ verlangen, dass verteilte Werke eine Zuschreibung der Mitwirkenden, RechteinhaberInnen, SponsorInnen und UrheberInnen beinhalten, soweit diese Vorgaben nicht beschwerlich sind.

#### 2.2.2 Integrität

Die **Lizenz** _kann_ verlangen, dass modifizierte Versionen einer lizenzierten Arbeit einen anderen Namen oder Versionsnummer als das ursprüngliche Werk tragen, oder auf andere Weise hervorheben, welche Änderungen vorgenommen wurden.

#### 2.2.3 Teilen unter gleichen Bedingungen

Die **Lizenz** _kann_ verlangen, dass Kopien oder Derivate eines lizenzierten Werkes unter gleicher oder ähnlicher Lizenz wie das Original bleiben.

#### 2.2.4 Hinweis

Die **Lizenz** _kann_ die Speicherung von Urheberschutzvermerken und Kennzeichnung der Lizenz verlangen.

#### 2.2.5 Quelle

Die **Lizenz** _kann_ fordern, dass veränderte Werke in einer Form zur Verfügung gestellt werden, die weitere Veränderungen bevorzugt.

#### 2.2.6 Verbot technischer Einschränkung

Die **Lizenz** _kann_ verbieten, dass das Werk in einer Weise verbreitet wird, bei der technische Maßnahmen das Ausüben der sonst erlaubten Rechte einschränken.

#### 2.2.7 Nicht-Angriff

Die **Lizenz** _kann_ verlangen, dass BearbeiterInnen der Öffentlichkeit weitergehende  Befugnisse gewähren (zum Beispiel Patent-Lizenzen), wenn diese zur Ausübung der von der Lizenz eingeräumten Rechte benötigt werden. Die Lizenz kann auch Genehmigungen bedingen, nicht gegen LizenznehmerInnen in Bezug auf die Ausübung jeglichen eingeräumten Rechts vorzugehen  (hier, zum Beispiel, Patent-Streitigkeiten).

_Translated by [Mathias Huter](https://twitter.com/mathiashuter) and [Julian Ausserhofer](https://twitter.com/julauss)_