od/2.1/de/index.markdown
---
title: Offen-Definition
layout: page
---

Version: 2.1

Die Offen-Definition präzisiert die Bedeutung von „offen” in Bezug auf Wissen, und unterstützt so eine starke Gemeinschaft, an der alle partizipieren können; die Fähigkeit zur Zusammenarbeit wird maximiert.

**Zusammenfassung:** *Wissen ist offen, wenn jedeR darauf frei zugreifen, es nutzen, verändern und teilen kann – eingeschränkt höchstens durch Maßnahmen, die Ursprung und Offenheit des Wissens bewahren.*

Diese grundlegende Bedeutung entspricht der von „offen” in Bezug auf Software, wie in der [Open-Source-Definition](https://opensource.org/docs/osd), und steht synonym für 

„frei” oder „libre” wie in den [Debian-Freie-Software-Richtlinien](http://www.debian.org/social*contract) und der [Definition freier kultureller Werke]

(https://de.wikipedia.org/wiki/Definition*freier*kultureller*Werke).

Der Begriff **Werk** wird im Folgenden verwendet, um ein Element oder ein Stück von Wissen, das übermittelt wird, zu bezeichnen.

Der Begriff **Lizenz** bezieht sich auf die rechtlichen Bedingungen, unter denen ein Werk zur Verfügung gestellt wird. 

Der Begriff **gemeinfrei** bezeichnet das Fehlen von Urheberrechten und ähnlichen Beschränkungen, sei es durch Nichtbestehen oder Verzicht auf Bestimmungen dieser Art.

Die Kernbegriffe "muss", "darf nicht", "sollte" und "darf" in diesem Dokument sind zu interpretieren wie in [RFC2119](https://tools.ietf.org/html/rfc2119) beschrieben.

## 1. Offene Werke

Ein offenes **Werk** *muss* die folgenden Anforderungen bei seiner Verteilung erfüllen:

### 1.1 Offene Lizenz oder offener Status

Das **Werk** *muss* **gemeinfrei** oder unter einer offenen **Lizenz** verfügbar sein (wie in Abschnitt 2 definiert). Jegliche zusätzliche Bedingungen, die das Werk begleiten (etwa Nutzungsbedingungen oder Patente, die von der lizenzgebenden Person gehalten werden), *dürfen* der Gemeinfreiheit oder den Bedingungen der Lizenz *nicht* widersprechen.

### 1.2 Zugang

Das **Werk** *soll* als Ganzes und zu nicht mehr als angemessenen, einmaligen Reproduktionskosten verfügbar sein, vorzugsweise als kostenloser Download über das Internet. Jegliche weitere Informationen, die zur Einhaltung von Lizenzbestimmungen benötigt werden (etwa die Namen der Mitwirkenden, welche für die Einhaltung von Namensnennungs-Anforderungen benötigt werden), *müssen* das Werk ebenfalls begleiten.

### 1.4 Maschinenlesbarkeit

Das **Werk** *muss* in einer Form bereitgestellt werden, die von einem Computer leicht zu verarbeiten ist und in der die einzelnen Elemente des Werks leicht zugänglich und veränderbar sind.

### 1.4 Offenes Format

Das **Werk** *muss* in einem offenen Format bereitgestellt werden. Ein offenes Format ist ein Format, das seiner Verwendung keine monetären oder sonstigen Einschränkungen auferlegt und mit mindestens einem Free/Libre/Open-Source-Softwaretool vollständig verarbeitet werden kann.

## 2. Offene Lizenzen

Eine **Lizenz** *sollte* mit anderen offenen Lizenzen kompatibel sein.

Eine **Lizenz** ist offen, wenn ihre Bestimmungen die folgenden Bedingungen erfüllen:

### 2.1 Erforderliche Berechtigungen

Die **Lizenz** *muss* unwiderruflich das Folgende erlauben (oder einräumen):

#### 2.1.1 Verwendung

Die **Lizenz** *muss* die kostenfreie Nutzung des lizenzierten Werks ermöglichen.

#### 2.1.2 Weiterverbreitung

Die **Lizenz** *muss* die Weiterverbreitung des lizensierten Werks, einschließlich Verkauf, erlauben – egal ob alleine, oder als Teil einer aus Werken von unterschiedlichen Quellen zusammengestellten Sammlung.

#### 2.1.3 Veränderung

Die **Lizenz** *muss* die Schaffung von Derivaten der lizenzierten Arbeit erlauben und die Verbreitung solcher Derivate unter den gleichen Bedingungen der ursprünglichen lizenzierten Arbeit gewähren.

#### 2.1.4 Teilung

Die **Lizenz** *muss* erlauben, dass jeder Teil des Werks frei verwendet, verbreitet, oder bearbeitet werden kann – unabhängig von jeglichem anderen Teil des Werks oder von jeglicher Sammlung von Werken, mit denen es ursprünglich verbreitet wurde. Alle Parteien, die einen Bestandteil jeglichen Teils eines Werkes innerhalb der Bestimmungen der Original-Lizenz erhalten haben, *sollten* dieselben Rechte erhalten wie die in Verbindung mit dem ursprünglichen Werk gewährten.

#### 2.1.5 Zusammenstellung

Die **Lizenz** *muss* erlauben, dass das lizenzierte Werk zusammen mit anderen eigenständigen Werken verbreitet wird, ohne dass dabei Beschränkungen für diese anderen Werke entstehen.

#### 2.1.6 Nicht-Diskriminierung

Die **Lizenz** *darf keine* Person oder Gruppe diskriminieren.

#### 2.1.7 Übertragung

Die mit dem Werk verbundenen Rechte *müssen* für alle, an die es verteilt worden ist, gelten – ohne dass es notwendig ist, irgendwelchen weiteren rechtlichen Bedingungen zuzustimmen.

#### 2.1.8 Anwendung auf jeden Zweck

Die **Lizenz** *muss* die Nutzung, Weitergabe, Änderung und Zusammenstellung für jeden Zweck zu erlauben. Die Lizenz *darf* niemanden darin beschränken, das Werk für einen bestimmten Zweck zu verwenden.

#### 2.1.9 Keine Gebühr

Die **Lizenz** *darf keine* Honorarvereinbarung, Lizenzgebühren oder andere Entschädigung oder monetäre Vergütung als Teil ihrer Bedingungen aufzwingen.

### 2.2 Akzeptable Bedingungen

Die **Lizenz** *darf nicht* die in Abschnitt 2.1 geforderten Genehmigungen einschränken, untergraben, oder anderweitig schwächen, außer unter den folgenden erlaubten 

Bedingungen:

#### 2.2.1 Zuschreibung

Die **Lizenz** *kann* verlangen, dass die Verbreitung des Werkes die Nennung der Mitwirkenden, RechteinhaberInnen, SponsorInnen und UrheberInnen beinhaltet, solange diese Vorgaben nicht beschwerlich sind.

#### 2.2.2 Integrität

Die **Lizenz** *kann* verlangen, dass modifizierte Versionen einer lizenzierten Arbeit einen anderen Namen oder Versionsnummer als das ursprüngliche Werk tragen, oder auf 

andere Weise hervorheben, welche Änderungen vorgenommen wurden.

#### 2.2.3 Teilen unter gleichen Bedingungen

Die **Lizenz** *kann* verlangen, dass die Weiterverbreitung eines Werkes unter gleicher oder ähnlicher Lizenz wie das Original erfolgt.

#### 2.2.4 Hinweis

Die **Lizenz** *kann* die Speicherung von Urheberschutzvermerken und Kennzeichnung der Lizenz verlangen.

#### 2.2.5 Quelle

Die **Lizenz** *kann* verlangen, dass jeder, der das Werk verbreitet, den Empfängern Zugang zu dem für Änderungen bevorzugten Format gewährt.

#### 2.2.6 Verbot technischer Einschränkung

Die **Lizenz** *kann* verlangen, dass die Verbreitung des Werkes frei von technischen Maßnahmen bleibt, die die Ausübung anderweitig gewährter Rechte einschränken würden.

#### 2.2.7 Nicht-Aggression

Die **Lizenz** *kann* verlangen, dass BearbeiterInnen der Öffentlichkeit weitergehende Befugnisse gewähren (zum Beispiel Patent-Lizenzen), wenn diese zur Ausübung der von der Lizenz eingeräumten Rechte benötigt werden. Die Lizenz kann auch Genehmigungen bedingen, nicht gegen LizenznehmerInnen in Bezug auf die Ausübung jeglichen eingeräumten Rechts vorzugehen  (hier, zum Beispiel, Patent-Streitigkeiten)

----
*Die Offen-Definition wurde ursprünglich von der Open-Source-Definition abgeleitet, die wiederum abgeleitet wurde von den ursprünglichen Debian-Freie-Software-Richtlinien und dem von Bruce Perens und den Debian-Entwicklern erstellten Debian-Gesellschaftsvertrag, aus dem die Richtlinien entspringen. Bruce verwendete später denselben Text bei der Erstellung der Open-Source-Definition. Diese Definition ist im Wesentlichen abgeleitet von diesen Dokumenten und behält ihre wesentlichen Grundsätze bei. Richard Stallman war der erste, der die Ideale der Softwarefreiheit vorantrieb - woran wir anschließen.

*Translation:*
 - *version 1.1: Christian Hauschke & Ulrich Herb with kind support of the German OKF community*
 - *version 2: [Mathias Huter](https://twitter.com/mathiashuter) and [Julian Ausserhofer](https://twitter.com/julauss)*
 - *version 2.1: Christian Hauschke*
